# wirelesscomm

./: README.md  pyproject.toml  readme.md
+nr/: CarrierConfig.m  NRConst.m  PDSCHConfig.m  hArrayGeometry.m  hNewHARQProcesses.m  hOFDMDemodulate.m  hOFDMInfo.m  hOFDMModulate.m  hPDSCHResources.m  hPDSCHTBS.m  hSSBurst.m  hSSBurstInfo.m  hSkipWeakTimingOffset.m  hUpdateHARQProcess.m  objtostruct.m
antennas/: demo_antennas.m
beamforming/: bf_inclass_partial.m  demo_bf.m
common/: plutoCreateTxRx.m
fading/: fading_inclass_partial.m
lectures/: CourseAdmin.pptx  Unit01_Antennas.pptx  Unit02_Propagation.pptx  Unit03_Fading.pptx  Unit04_Coding.pptx  Unit05_AMC.pptx  Unit06_Beamforming.pptx  Unit07_ChanEst.pptx  Unit09_MIMO.pptx
propagation/: lab_prop_modeling_partial.m
sionnautils/: antenna.py  custom_scene.py  empty_scene.xml  miutils.py
unit01_antennas/: antennas_inclass.mlx  antennas_inclass_soln.mlx  demo_3gpp_antenna.mlx  demo_antennas.m  demo_sionna_free_space.ipynb  demo_spherical.m  lab_uav_antenna.mlx  lab_uav_antenna_partial.m  lab_uav_antenna_sn.ipynb  online.md  patch_bottom_data.mat  readme.md  rotations.mlx  uav_patch_bottom.csv
unit02_propagation/: demo_awgn.mlx  demo_path_loss_model.m  lab_prop_modeling.mlx  lab_ray_tracing.ipynb  lte_mcs.xlsx  pathdata.mat  propagation_inclass.mlx  propagation_inclass_soln.mlx  readme.md
unit03_fading/: demo_fading.m  demo_fading.mlx  fading_inclass.mlx  fading_inclass_soln.mlx  readme.md
unit04_coding/: coding_inclass.mlx  coding_inclass_soln.mlx  demo_conv.mlx  demo_rate_dist.mlx  demo_uncoded.mlx  (+1 more)
(+1950 files in other folders)
